[package]
name = "crypto-common"
description = "Common cryptographic traits"
version = "0.2.0" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers", "Conrad Ludgate <conradludgate@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/crypto-common"
repository = "https://github.com/conradludgate/crypto-traits"
keywords = ["crypto", "traits"]
categories = ["cryptography", "no-std"]

[dependencies]
rand_core = { version = "0.6", optional = true }
array = { version = "0.1", path = "../array" }

[features]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
