[package]
name = "digest"
description = "Traits for cryptographic hash functions"
version = "0.11.0" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers", "Conrad Ludgate <conradludgate@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/digest"
repository = "https://github.com/conradludgate/crypto-traits"
keywords = ["digest", "crypto", "hash"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-common = { version = "0.2.0", path = "../crypto-common" }
array = { version = "0.1", path = "../array" }
block-buffer = { version = "0.11", optional = true, path = "../block-buffer" }
subtle = { version = "=2.4", default-features = false, optional = true }
blobby = { version = "0.3", optional = true }

[features]
default = ["core-api"]
core-api = ["block-buffer"] # Enable Core API traits
mac = ["subtle"] # Enable MAC traits
rand_core = ["crypto-common/rand_core"] # Enable random key generation methods
alloc = []
std = ["alloc", "crypto-common/std"]
dev = ["blobby"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
