[package]
name = "universal-hash"
version = "0.4.1" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers", "Conrad Ludgate <conradludgate@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Trait for universal hash functions"
documentation = "https://docs.rs/universal-hash"
repository = "https://github.com/conradludgate/crypto-traits"
keywords = ["crypto", "mac"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
generic-array = "0.14"
subtle = { version = "=2.4", default-features = false }

[features]
std = []

[package.metadata.docs.rs]
all-features = true
